# gi-python

./: CHANGELOG.md  LICENSE  README.md  setup.cfg
src/: main.py
