[metadata]
name = gi
version = 0.0.1
author = tomo-noma
author_email = b58v.oeg@gmail.com
description = Command line tools for gitignore.io from python.
long_description = file:README.md
url = https://github.com/tomo-noma/gi-python
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
package_dir = src
zip_safe = false
packages = find:

[options.entry_points]
console_scripts =
    gi = gi.main: main
